tests/neg/i3537.scala
class Foo(x: Int)

object Test {
  val res0 = new Foo("Hello") // error
}
